# securebrainbox

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
defaults/: IDENTITY.md  MEMORY.md  SOUL.md  USER.md
defaults/skills/analysis/: SKILL.md
defaults/skills/research/: SKILL.md
defaults/skills/writing/: SKILL.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  PRD-SOUL-SYSTEM.md  PRP-SOUL-PHASE-1-CORE-FILES.md  PRP-SOUL-PHASE-2-MEMORY-SYSTEM.md  PRP-SOUL-PHASE-3-SKILLS.md  PRP-SOUL-PHASE-4-BOOTSTRAP.md  TROUBLESHOOTING.md
homebrew/: README.md  securebrainbox.rb
npm/: README.md  package.json
scripts/: init_models.sh  install.ps1  install.sh
src/: __init__.py  config.py  main.py
src/agent/: brain.py  entities.py  graph_queries.py  prompts.py
src/bot/: app.py  commands.py  handlers.py  middleware.py
src/cli/: commands.py  config.py  install.py  main.py
src/processors/: __init__.py  audio.py  base.py  image.py  pdf.py  url.py
src/soul/: __init__.py  bootstrap.py  flush.py  init.py  loader.py  memory.py  skills.py
src/storage/: graph.py  vectors.py
src/utils/: chunking.py  embeddings.py  llm.py
tests/: conftest.py  test_agent.py  test_bootstrap.py  test_bot.py  test_cli.py  test_config.py  test_graph.py  test_memory.py  test_processors.py  test_rag.py  test_skills.py  test_soul.py
