[project]
name = "securebrainbox"
version = "0.1.0"
description = "100% local AI agent for Telegram with vector + graph memory"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Eric Risco"}
]
keywords = ["ai", "telegram", "bot", "rag", "local", "privacy", "ollama", "weaviate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Telegram
    "python-telegram-bot>=22.0",
    
    # LLM & Embeddings
    "ollama>=0.4.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-weaviate>=0.1.0",
    
    # Vector Store
    "weaviate-client>=4.0.0",
    
    # File Processing
    "pypdf>=4.0.0",
    "pdfplumber>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
    "python-docx>=1.0.0",
    "Pillow>=10.0.0",
    
    # Audio (optional - will use API if not available)
    # "openai-whisper>=20231117",
    
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
whisper = [
    "openai-whisper>=20231117",
]

[project.urls]
Homepage = "https://github.com/ericrisco/securebrainbox"
Repository = "https://github.com/ericrisco/securebrainbox"
Issues = "https://github.com/ericrisco/securebrainbox/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
